[tool.poetry]
name = "foocat_tao_huang"
version = "0.1.0"
description = "this is for master Zao"
authors = ["taohuang-ubc <tonyhuang0526ubc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
statistics = "^1.0.3"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
